# WebCompiler

./: .gitignore  Cargo.toml  README.md  run.sh  web-crawler.toml
demos/: README.md
demos/advance/: README.md
demos/basic/: .watchexec-ignore  site.html  web-compiler.toml
demos/basic/assets/: sources.md
demos/basic/blog/: introducing-the-compiler.html  performance-vs-flexibility.html
demos/basic/common/: breadcrumbs.html  footer.html  header.html
demos/basic/components/: TabView.html
demos/basic/pages/: .context.html  about.html  blog.html  docs.html  index.html  samples.html
demos/basic/pages/blog/: .breadcrumbs.html  index.html  introducing-the-compiler.html  performance-vs-flexibility.html
demos/basic/pages/docs/: getting-started.html  index.html  overview.html
demos/basic/pages/docs/cli/: commands.html  index.html
demos/basic/scripts/: build-dev.sh  build.sh  serve.sh  watch.sh
demos/basic/styling/: base.css  typography.css
demos/basic/templates/: blog-post.html  global.html
notes/XML-AI/: StandaloneExample.html
samples/: main.html  page.html
schema/: include.json  macro-tags.json
scripts/: formatted-code.sh  install.sh
scripts/basic-demo/: compile.sh  watch.sh
web-client-bot/: Cargo.toml
web-client-bot/snippets/: scrape_anchors.js
web-client-bot/src/: data.rs  lib.rs  wait_framework.rs
web-compiler/: Cargo.toml
web-compiler-base/: Cargo.toml
web-compiler-base/src/: lib.rs  system.rs
web-compiler-base/src/common/: log.rs  mod.rs  symlink.rs
web-compiler-base/src/markup/: mod.rs  post.rs  pre.rs
web-compiler-base/src/markup/macros/: bind.rs  content.rs  enumerate.rs  include.rs  mod.rs  provision.rs
web-compiler-base/src/markup/rewrites/: mod.rs  style.rs
web-compiler-common/: Cargo.toml
web-compiler-common/src/: dependency.rs  lib.rs  path_resolver.rs  srcset.rs  utilities.rs  vpath.rs
web-compiler-core/: Cargo.toml
web-compiler-core/src/: compiler.rs  css_compiler.rs  css_processor.rs  lib.rs  markup.rs  pipeline.rs  post_processor.rs  pre_processor.rs  system.rs  xml_ai.rs
web-compiler-core/src/common/: constants.rs  mod.rs  path_utils.rs  symlink.rs
web-compiler-core/src/data/: breadcrumbs.rs
web-compiler-core/src/macros/: bind.rs  context.rs  enumerate.rs  include.rs  inject.rs  mod.rs
web-compiler-core/src/markup/: mod.rs  post.rs  pre.rs  rewrite_dsl.rs
web-compiler-core/src/markup/macros/: bind.rs  content.rs  context.rs  define.rs  define_title.rs  enumerate.rs  hoist.rs  include.rs  inject.rs  mod.rs  provision.rs  rewrite.rs  route.rs
web-compiler-core/src/markup/rewrites/: attributes.rs  document.rs  headings.rs  mod.rs  style.rs
web-compiler-core/src/post_processor/: resolve_links.rs
web-compiler-core/src/pre_processor/: attributes.rs  bind.rs  content.rs  enumerate.rs  environment.rs  include.rs  links.rs  value.rs
web-compiler-core/src/rewrite_rules/: attributes.rs  link.rs  mod.rs  style.rs
web-compiler-css/: Cargo.toml
web-compiler-css/src/: lib.rs
web-compiler-html-ast/: Cargo.toml
web-compiler-html-ast/src/: constants.rs  html_parser.rs  html_parser2.rs  html_string.rs  lib.rs  transform.rs  traversal.rs
web-compiler-io-types/: Cargo.toml
web-compiler-io-types/src/: lib.rs
web-compiler-macro-types/: Cargo.toml
web-compiler-macro-types/src/: breadcrumbs.rs  context.rs  environment.rs  lib.rs  macro_tag.rs  path_expr.rs  path_utils.rs  project.rs  scope.rs  tag_rewrite_rule.rs
web-compiler-macro-types/src/helpers/: mod.rs  srcset.rs
web-compiler-markup-parser/: Cargo.toml
web-compiler-markup-parser/src/: lib.rs
web-compiler-types/: Cargo.toml
web-compiler-types/src/: lib.rs  system.rs
web-compiler-xml-ast/: Cargo.toml
web-compiler-xml-ast/src/: ast.rs  attrs.rs  format.rs  lib.rs  markers.rs  parser.rs  tag.rs  text_contents.rs  transform.rs  traversal.rs
web-compiler-xml-ast/src/format/: pretty_html.rs
web-compiler/src/: cli.rs  main.rs  manifest.rs
web-crawler/: Cargo.toml
web-crawler/src/: cli.rs  main.rs  manifest.rs  processor.rs
web-crawler/src/crawler/: db.rs  engine.rs  mod.rs
web-crawler/src/processor/: metadata.rs  passes.rs
xml-ai/: Cargo.toml
xml-ai-client/: Cargo.toml
xml-ai-client/src/: client.rs  lib.rs  log.rs  request.rs
xml-ai-core/: Cargo.toml
xml-ai-core/src/: compile.rs  core_ast.rs  dsl.rs  frontend_ast.rs  json_validation.rs  lib.rs  runtime.rs  text_edit.rs
xml-ai-core/src/common/: mod.rs  types.rs
xml-ai-core/src/frontend_ast/: attribute_types.rs
xml-ai-engine/: Cargo.toml
xml-ai-engine/src/: ast.rs  common.rs  lib.rs
xml-ai-engine/src/ast/: message.rs  prompt.rs  text.rs  value_types.rs
xml-ai-engine/src/common/: message.rs  prompt.rs
xml-ai/src/: cli.rs  main.rs
