[workspace]
members = [
    "web-compiler-xml-ast",
    "web-compiler-markup-parser",
    "web-compiler-io-types",
    "web-compiler-macro-types",
    "web-compiler-css",
    "web-compiler-base",
    "web-compiler-core",
    "web-compiler",
    "xml-ai-client",
    "xml-ai-core",
    "xml-ai",
]

resolver = "3"  # Use resolver version 3 (recommended for edition 2021/2024)
