[workspace]
members = [
    "web-compiler-xml-ast",
    "web-compiler-markup-parser",
    "web-compiler-io-types",
    "web-compiler-macro-types",
    "web-compiler-types",
    "web-compiler-css",
    "web-compiler-core",
    "web-compiler",
    "xml-ai-client",
    "xml-ai-core",
    "xml-ai",
    "web-client-bot",
    "web-crawler",
]

resolver = "3"  # Use resolver version 3 (recommended for edition 2021/2024)
