[package]
name = "web-client-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
futures = "0.3"
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"

[dependencies.chromiumoxide]
git = "https://github.com/mattsse/chromiumoxide"
features = ["tokio", "tokio-runtime"]
default-features = false
branch = "main"
