[package]
name = "web-compiler-common"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.2"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0", features = ["preserve_order"]}
path-clean = "1.0.1"
pathdiff = "0.2.3"
percent-encoding = "2.3.1"
once_cell = "1.19"
