[package]
name = "web-compiler-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0", features = ["preserve_order"]}
# html-escape = "0.2"
once_cell = "1.19"
path-clean = "1.0.1"
pathdiff = "0.2.3"

# —— CSS PARSING ——————————————————————————————————————————————————————————————
# lightningcss = { version = "1.0.0-alpha.66", features = ['visitor']}

# —— DEBUGGING ————————————————————————————————————————————————————————————————
pretty-tree = { git = "https://github.com/colbyn/pretty-tree-rs.git", rev = "7b75084"}

# —— LOCAL ————————————————————————————————————————————————————————————————————
web-compiler-html-ast = { path = "../web-compiler-html-ast"}
web-compiler-common = { path = "../web-compiler-common"}
