[package]
name = "web-compiler-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
once_cell = "1.19"
path-clean = "1.0.1"
pathdiff = "0.2.3"
glob = "0.3.2"
itertools = "0.14.0"
tokio = { version = "1.45.1", features = ["full"] }
# futures = { version = "0.3", features = [ "default" ] }

web-compiler-io-types = { path = "../web-compiler-io-types" }
web-compiler-xml-ast = { path = "../web-compiler-xml-ast" }
web-compiler-macro-types = { path = "../web-compiler-macro-types" }
web-compiler-css = { path = "../web-compiler-css" }
web-compiler-types = { path = "../web-compiler-types" }
xml-ai-core = { path = "../xml-ai-core" }

# —— CSS PARSING ——————————————————————————————————————————————————————————————
# lightningcss = { version = "1.0.0-alpha.66", features = ['visitor']}
