[package]
name = "web-compiler-css"
version = "0.1.0"
edition = "2024"

[dependencies]
# once_cell = "1.19"
# path-clean = "1.0.1"
# pathdiff = "0.2.3"
# glob = "0.3.2"
# itertools = "0.14.0"

web-compiler-io-types = { path = "../web-compiler-io-types" }
web-compiler-macro-types = { path = "../web-compiler-macro-types" }

# —— CSS PARSING ——————————————————————————————————————————————————————————————
lightningcss = { version = "1.0.0-alpha.66", features = ['visitor']}

