[package]
name = "web-compiler-html-ast"
version = "0.1.0"
edition = "2024"

[dependencies]

# —— HTML PARSING —————————————————————————————————————————————————————————————
tendril = "0.4"
once_cell = "1.19"

html5ever = "0.25.1"
markup5ever = "0.10.0"
markup5ever_rcdom = "0.1.0"

# —— DEBUGGING ————————————————————————————————————————————————————————————————
pretty-tree = { git = "https://github.com/colbyn/pretty-tree-rs.git", rev = "7b75084"}
