[package]
name = "web-compiler-macro-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
percent-encoding = "2.3.1"
path-clean = "1.0.1"
web-compiler-xml-ast = { path = "../web-compiler-xml-ast" }
web-compiler-io-types = { path = "../web-compiler-io-types" }
