[package]
name = "web-compiler-types"
version = "0.1.0"
edition = "2024"

[dependencies]
web-compiler-io-types = { path = "../web-compiler-io-types" }
web-compiler-macro-types = { path = "../web-compiler-macro-types" }
# web-compiler-xml-ast = { path = "../web-compiler-xml-ast" }
# web-compiler-css = { path = "../web-compiler-css" }