[package]
name = "web-compiler-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# percent-encoding = "2.3.1"
# path-clean = "1.0.1"
web-compiler-io-types = { path = "../web-compiler-io-types" }
web-compiler-macro-types = { path = "../web-compiler-macro-types" }
web-compiler-xml-ast = { path = "../web-compiler-xml-ast" }
