[package]
name = "web-compiler-xml-ast"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = "0.37.5"
indexmap = "2.9.0"
once_cell = "1.19"
html-escape = "0.2.13"

web-compiler-io-types = { path = "../web-compiler-io-types" }
web-compiler-markup-parser = { path = "../web-compiler-markup-parser" }
