[package]
name = "web-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
toml = "0.8.22"

# —— LOCAL ————————————————————————————————————————————————————————————————————
web-compiler-html-ast = { path = "../web-compiler-html-ast"}
web-compiler-common = { path = "../web-compiler-common"}
web-compiler-core = { path = "../web-compiler-core"}
