[package]
name = "web-compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
web-compiler-io-types = { path = "../web-compiler-io-types" }
web-compiler-xml-ast = { path = "../web-compiler-xml-ast" }
web-compiler-macro-types = { path = "../web-compiler-macro-types" }
web-compiler-core = { path = "../web-compiler-core" }
