[package]
name = "web-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
toml = "0.8.23"
futures = "0.3"
tokio = { version = "1.45.1", features = ["full"] }
# colored = "3.0.0"
async-trait = "0.1.88"
chrono = "0.4"
url = "2"
sha2 = "0.10.9"
walkdir = "2.5.0"
once_cell = "1.19"

web-client-bot = { path = "../web-client-bot" }
web-compiler-xml-ast = { path = "../web-compiler-xml-ast" }
