[package]
name = "xml-ai-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
unindent = "0.2.4"
jsonschema = "0.30.0"
referencing = "0.30.0"
percent-encoding = "2.3"

web-compiler-xml-ast = { path = "../web-compiler-xml-ast" }
xml-ai-client = { path = "../xml-ai-client" }

# web-compiler-io-types = { path = "../web-compiler-io-types" }
# web-compiler-macro-types = { path = "../web-compiler-macro-types" }