[package]
name = "xml-ai-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
unindent = "0.2.4"

# —— JSON SCHEMA ——————————————————————————————————————————————————————————————
jsonschema = "0.30.0"
referencing = "0.30.0"
# percent-encoding = "2.3"

# —— LOCAL ————————————————————————————————————————————————————————————————————
web-compiler-xml-ast = { path = "../web-compiler-xml-ast" }
xml-ai-client = { path = "../xml-ai-client" }
