[package]
name = "xml-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"

# —— LOCAL ————————————————————————————————————————————————————————————————————
xml-ai-core = { path = "../xml-ai-core" }
web-compiler-core = { path = "../web-compiler-core" }
